--- a/app/assets/styles/module/_section-title.css
+++ b/app/assets/styles/module/_section-title.css
@@ -16,13 +16,17 @@ strong{
   margin-left: auto;
   margin-right: auto;
   margin-bottom: .6rem;
-  @mixin atSmall{
-    margin-bottom: 0;
-      margin-right: .5rem;
-      margin-left: 0;
-      display: inline-block;
-
+@mixin atSmall{
+  margin-bottom: 0;
+  margin-right: .5rem;
+  margin-left: 0;
+  display: inline-block;
+  position: relative;
+  top: 8px;
   }
 
+}
+&__blue{
+  color:$mainBlue;
 }
 }
