--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -11,3 +11,5 @@
 @import "module/_generic-content-container";
 @import "module/_section-title";
 @import "module/_feature-item";
+@import "module/_testimonial";
+@import "module/_sprite";
