Completed Sticky-header-functionality

--- a/app/assets/styles/module/_primary-nav.css
+++ b/app/assets/styles/module/_primary-nav.css
@@ -55,6 +55,10 @@ background-color: rgba($mainBlue,.5);
 padding: 12px 0;
 font-size: .8rem;
 background-color: transparent;
+
+&.is-current-link{
+  color:#fabb69;
+}
 }
 }
 }
