Completed the modal overlay

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -17,3 +17,5 @@
 @import "module/_site-header";
 @import "module/_primary-nav";
 @import "module/_reveal-item";
+@import "module/_modal";
+@import "module/_social-icons";
